--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,8 @@ project:
   output-dir: docs
 website:
   title: "blog"
+  site-url: https://hafez-ahmad.github.io
+  description: "My personal blog"
   navbar:
     right:
       - about.qmd
@@ -10,6 +12,12 @@ website:
         href: https://github.com/
       - icon: twitter
         href: https://twitter.com
+      - icon: linkedin
+        text: LinkedIn
+        href: https://linkedin.com
+      - icon: github
+        text: Github
+        href: https://github.com
 format:
   html:
     theme: cosmo
